<resources>
    <string name="app_name">一个聚合</string>
    <string name="MobileNoTrack">号码归属地查询</string>
    <string name="History">历史查询结果</string>
    <string name="MobileNoTrackActivityTitle">手机号码归属地查询</string>
    <string name="HistoryActivityTitle">历史查询记录</string>
    <string name="NetwordTelContacts">手机联系人</string>
    <string name="HismileSignIn">海斯曼签到</string>
    <string name="WXRedPack">微信抢红包</string>
    <string name="phone_num_attribution">手机号码归属地查询</string>
    <string name="enter_phone_num">请输入手机号码</string>
    <string name="query_results">查询结果</string>
</resources>
